# NaturalTerminal

./: .gitignore  Cargo.toml  README.md  build.sh  setup-alias.sh
src/: main.rs  prompt_preprocessor.rs
src/large_language_model_interface/: large_language_model_trait.rs  mod.rs
src/large_language_model_interface/configs/: config.rs  configs_handler.rs  mod.rs
src/large_language_model_interface/ollama_llm/: mod.rs  ollama_llm.rs
src/large_language_model_interface/open_router_llm/: data_structure.rs  mod.rs  open_router_llm.rs
src/tool_interface/: cli.rs  commands.rs
src/utilities/: mod.rs  secret_manager.rs
