[package]
name = "NaturalTerminal"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.96"
clipboard = "0.5.0"
dirs = "6.0.0"
keyring = { version = "3.6.2", features = ["apple-native"] }
